# HaskellCV

./: .gitignore  CV.hs  Implementation status.xlsx  LICENSE  README.md  array.cpp  array.h  build.sh  detecttest.m  draw.cpp  draw.h  filter.cpp  haskell-cv.cabal  main.hs  mainlib.cpp  mainlib.h  particle.hs  test.hs
CV/: Convert.hs  Core.hs  Demo.hs  Draw.hs  FFI.hs  Filter.hs  Instance.hs  Pixel.hs  Test.hs  Types.hs
csrc/: array.cpp  array.h  draw.cpp  filter.cpp  histogram.cpp
src/: CV.hs  main2.hs
src/CV/: Convert.hs  Core.hs  Draw.hs  FFI.hs  Filter.hs  IO.hs  Operation.hs  Pixel.hs  Types.hs
